kubernetes-one/deployment-quote.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-deployment
  namespace: development
  labels:
    app: quote
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quote
  template:
    metadata:
      labels:
        app: quote
    spec:
      containers:
      - name: quote
        image: datawire/quote:0.5.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          #runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quote-service
  namespace: development
spec:
  selector:
    app: quote
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
