kubernetes-one/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generic-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /quote(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: quote-service
                port:
                  number: 8080
          - path: /springboot-note(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: springboot-note-service
                port:
                  number: 8080
